Fix bug of Home Page Footer Alignment Fix bug of Subpage text area problem Fix bug of Subpage form margin Fix bug of IE incompatibility Fix bug of button too long in Subpage

--- a/trunk/Oxygen_test2/CSS/style.css
+++ b/trunk/Oxygen_test2/CSS/style.css
@@ -543,7 +543,7 @@ hr { display: none; }
 /* Footer */
 
 #footer {
-    margin-top:60px;
+    margin-top:10px;
     width: 1024px;
     font-size: 12px;
     height: 120px;
@@ -551,6 +551,7 @@ hr { display: none; }
     float:left;
     font-family: Arial;
 }
+
 
 #footer #image_footer {
     float: left;
